--- a/conf/web.xml
+++ b/conf/web.xml
@@ -460,6 +460,15 @@
         <url-pattern>/cgi-bin/*</url-pattern>
     </servlet-mapping>
 -->
+    <security-constraint>
+        <web-resource-collection>
+        <web-resource-name>Entire Application</web-resource-name>
+        <url-pattern>/*</url-pattern>
+        </web-resource-collection>
+        <user-data-constraint>
+        <transport-guarantee>CONFIDENTIAL</transport-guarantee>
+        </user-data-constraint>
+    </security-constraint>
 
 
   <!-- ================== Built In Filter Definitions ===================== -->
